# ccbot-agent

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
ccbot_agent/: main.py  windows_installer.py
scripts/: bump_version.py
