[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ccbot-agent"
version = "0.1.14"
description = "CyberCare AI CCBot monitoring agent"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "ZHL Technology"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
ccbot-agent = "ccbot_agent.main:main"

[project.optional-dependencies]
windows = ["pillow>=10", "pystray>=0.19"]

[project.urls]
Homepage = "https://cybercareai.io"
Repository = "https://github.com/ZHL-Technology/ccbot-agent"
